# MP_lang

./: .gitignore  Cargo.toml  README_zh.md  language-configuration.json  readme.md
examples/: 01_basics.mp  02_operators.mp  03_array.mp  04_object.mp  05_function.mp  06_conditional.mp  07_while_loop.mp  08_break_continue.mp  09_builtin_functions.mp  10_recursion.mp  11_comprehensive.mp  add_global_val.mp  big_loop.mp  example.mp  fib.mp  guess_number.mp  laugh_problem.mp  solve_oj_problem.mp  test.mp
src/: ast.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  lsp_bin.rs  main.rs  parser.rs
src/lexer/: error.rs  mod.rs  processors.rs  token.rs
src/lexer/error/: mod.rs
src/lsp/: completion.rs  definition.rs  diagnostics.rs  hover.rs  inlay_hint.rs  mod.rs  server.rs  shared.rs  symbols.rs  type_analysis.rs  workspace_symbols.rs
src/parser/: ast.rs  error.rs  mod.rs
src/parser/error/: mod.rs
src/runtime/: error.rs  eval.rs  mod.rs
src/runtime/environment/: builtin_function.rs  environment_value.rs  mod.rs  value.rs
src/runtime/environment/function/: builtin.rs  mod.rs  user.rs
src/runtime/error/: mod.rs
src/runtime/eval/: mod.rs
tests/: lexer_test.rs  lsp_test.rs  parser_test.rs  runtime_test.rs
vscode-extension/: language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: mp.tmLanguage.json
