[package]
name = "mp_lang"
version = "0.1.0"
edition = "2024"

[lib]
name = "mp_lang"
path = "src/lib.rs"

[[bin]]
name = "mp"
path = "src/main.rs"

[[bin]]
name = "mp-lang-lsp"
path = "src/lsp_bin.rs"

[dependencies]
rand = "0.10.1"
rustyline = { version = "18.0.0", features = ["derive"] }
tower-lsp-server = "0.23.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
